# ai-interview-copilot

./: README.md
client/: index.html  package.json
client/src/: App.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: audio.rs  lib.rs
server/: main.py  requirements.txt
