[package]
name = "ai-interview-copilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["multipart", "json"] }
